--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,15 @@ ul {
 span {
     cursor: pointer;
 }
+.buttons ul {
+    padding: 0px;
+}
+.buttons li {
+    margin: 5px;
+    display: inline;
+    border: 1px solid black;
+    padding: 10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
